syntax="proto3";

option java_package = "org.qiunet.test.proto";

option java_outer_classname = "HeaderProto";

message RequestHeader {
	 string token = 1;			// 玩家的校验码
	 int32 uid = 2;				// 请求的玩家uid , 如果登录协议, 可以传 0 不校验
}

// 响应头. 每个协议都会给.
message ResponseHeader {
	int32 ret = 1;						// 返回的ret 为 0 或者 1 为正确, 其他错误
	string msg = 2;						// 如果 ret 不为0 则msg为错误描述
}

message ErrorResponse {
	ResponseHeader header = 1;
}
