// 玩家登陆的协议
// cmdId  为  1001
syntax="proto3";

option java_package = "org.qiunet.test.proto";

option java_outer_classname = "PlayerIndexProto";

import "Header.proto";

message PlayerIndexRequest {
	RequestHeader header = 1;
}

/** 登录请求响应 **/
message PlayerIndexResponse {
	ResponseHeader header = 1;
	repeated Item items = 2;
}

/** 道具 */
message Item {
	int32 item_id = 1;
	int32 count = 2;
}
