// 玩家登陆的协议
// cmdId  为  1001
syntax="proto3";

option java_package = "org.qiunet.test.proto";

option java_outer_classname = "LoginProto";

message LoginRequest {
	string openid = 1;
}

// 登录请求响应
message LoginResponse {
	int32 uid = 1;
	string token = 2;
	bool registered = 3;	// 是否注册过
}
